PR tweaks from swingset-brian. SSComponent.toString().